--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,8 @@
         "prettier"
     ],
     "rules": {
+      "react/jsx-props-no-spreading":"off",
+      "react/prop-types":"off",
       "no-use-before-define": "off",
       "@typescript-eslint/no-use-before-define": ["error"],
       "prettier/prettier": "error",
